# Consolidated-Firmware

./: .clang-format  .clang-tidy  .dockerignore  .env  .gdbinit  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakeLists_template.txt  CMakePresets.json  Dockerfile  Dummy_Name.csv  Makefile  Pipfile  README.md  WINDOWS_SETUP.md  app_powerCurrentLimit.c  asyncio_can.py  bootcount.py  build  canspect.py  crc32.h  current_calibration_400a.csv  current_calibration_both.csv  dam_cam.py  docker-compose.yaml  gcc-arm-none-eabi.cmake  historical.db  install.txt  open_stm32cubemx.sh  python.cmake  quintuna.dbc  refactor.py  setup.ps1  setup.sh  shared.cmake  spec.py  (+6 more)
boards/: CMakeLists.txt  CMakeLists.txt.in  CMakePresets.json  MockSignals.json  boards.ioc  build-fw.py
boards/BMS/: .cproject  .project  BMS Debug.launch  BMS.ioc  BMS.ioc.bak  BMS.ioc.md5  BMS.xml  CMakeLists.txt  STM32F302C8TX_FLASH.ld  STM32F302C8Tx_FLASH.ld  STM32F412RGTx_FLASH.ld  generate_can_code.py  mx.scratch
boards/BMS/.externalToolBuilders/: BMS CAN Generation.launch
boards/BMS/Debug/: BMS.list  makefile  objects.list  sources.mk
boards/BMS/Inc/: BoardSpecifics.h  FreeRTOSConfig.h  main.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
boards/BMS/Release/: BMS.list  makefile  sources.mk
boards/BMS/Src/: App_Imd.c  App_SoftwareWatchdog.c  App_StackWaterMark.c  Io_Can.c  Io_Imd.c  freertos.c  main.c  stm32f3xx_hal_msp.c  stm32f3xx_hal_tim_callbacks.c  stm32f3xx_hal_timebase_tim.c  stm32f3xx_it.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  syscalls.c  system_stm32f4xx.c
boards/BMS2/: .cproject  .project  BMS2 Debug.launch  BMS2.ioc  STM32F302C8TX_FLASH.ld
boards/BMS2/.externalToolBuilders/: BMS2 CAN Generation.launch
boards/BMS2/Inc/: FreeRTOSConfig.h  main.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h
boards/BMS2/Src/: main.c  stm32f3xx_hal_msp.c  stm32f3xx_hal_timebase_tim.c  stm32f3xx_it.c
boards/DCM/: .cproject  .project  CMakeLists.txt  DCM Debug.cfg  DCM Debug.launch  DCM.ioc  DCM.ioc.md5  DCM.xml  STM32F302R8TX_FLASH.ld  STM32F412RGTx_FLASH.ld  mx.scratch
boards/DCM/.externalToolBuilders/: DCM CAN Generation.launch
boards/DCM/EWARM/: DCM.ewd  DCM.ewp  Project.eww  stm32f412rx_sram.icf
boards/DCM/IOC Backup/: DCM.ioc
boards/DCM/Inc/: App_CanMsgsTx.h  App_SoC.h  App_StateMachine.h  BoardSpecificDefines.h  BoardSpecifics.h  FreeRTOSConfig.h  Io_Imu_LSM6DS33.h  main.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
boards/DCM/Src/: App_CanMsgsTx.c  App_Soc.c  App_SoftwareWatchdog.c  App_StateMachine.c  Io_Can.c  Io_Gpio.c  Io_Imu_LSM6DS33.c  freertos.c  main.c  stm32f3xx_hal_msp.c  stm32f3xx_hal_timebase_tim.c  stm32f3xx_it.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  (+1 more)
boards/DIM/: .cproject  .project  CMakeLists.txt  DIM.ioc  DIM.ioc.md5  DIM.launch  DIM.xml  STM32F302CCTx_FLASH.ld  STM32F412RGTx_FLASH.ld  mx.scratch
boards/FSM/: .cproject  .project  CMakeLists.txt  FSM Debug.launch  FSM.ioc  FSM.ioc.md5  FSM.xml  STM32F302C8Tx_FLASH.ld  STM32F302CCTx_FLASH.ld  mx.scratch
boards/GSM/: CMakeLists.txt  STM32F302CCTx_FLASH.ld
boards/INV/: CMakeLists.txt  INV.ioc  STM32F765VGTx_FLASH.ld
boards/JSONCANTest/: CMakeLists.txt  JSONCANTest.ioc
boards/PDM/: .cproject  .project  CMakeLists.txt  PDM Debug.launch  PDM.ioc  PDM.ioc.md5  PDM.xml  STM32F302RCTx_FLASH.ld  STM32F303RETx_FLASH.ld  STM32F412RGTx_FLASH.ld  mx.scratch
boards/build_x86/: CTestTestfile.cmake  DartConfiguration.tcl
boards/shared/: CMakeLists.txt  README.md
firmware/: CMakeLists.txt  firmware.ioc
firmware/boot/: CMakeLists.txt  README.md  bootloader.c  bootloader.cpp  bootloader.h  bootloader.hpp  bootloader_f4.c  bootloader_h7.c  bootloader_hx.c  config.h
firmware/chimera/: chimera.py  generate_board_libs.sh  test_bms.py  test_chimera.py  test_crit.py  test_fsm.py  test_rsm.py  test_vc.py
firmware/chimera_v2/: CMakeLists.txt  README.md  chimera_v2.py  f4dev_blinky.py  generate_proto.sh  load_bank.py  power_supply.py  pyproject.toml  ruff.toml  scope.py  test.py
firmware/cmake/: CMakeLists.txt  autodiff.cmake  backup.cmake  bootlib.cmake  chimeralib.cmake  dependencies.cmake  eigenlib.cmake  embedded.cmake  embedded_libs.cmake  matplotlib.cmake  sbgecomlib.cmake  shared.cmake  sil.cmake  stmlib.cmake  test_libs.cmake  tests.cmake
firmware/dev/: CMakeLists.txt
firmware/hexray/: CMakeLists.txt
firmware/loader/: CMakeLists.txt
firmware/logfs/: CMakeLists.txt  README.MD  logfs.c  logfs.h  logfs_util.c  logfs_util.h
firmware/quadruna/: CMakeLists.txt
firmware/quintuna/: CMakeLists.txt  f4base.ioc  h7base.ioc
firmware/serial_debugger/: CMakeLists.txt  README.txt  debug_modules.proto  debug_modules_pb2.py  generate_board_libs.sh  generate_proto_py.sh  serial_debugger.py  serial_demo.ipynb  test_debug_modules.py  test_serial_debugger.py
firmware/shared/: CMakeLists.txt
firmware/test/: CMakeLists.txt  api1.c  api1.h  api2.c  api2.h  ecuTestBase.hpp  impl.c  impl.h  main.c  utils.h
firmware/thruna/: CMakeLists.txt
lib/: CMakeLists.txt
lib/SEGGER_RTT/: CMakeLists.txt
software/dimos/: .gitignore  APP_STATUS_AND_NEXT_STEPS.md  CMakeLists.txt  Dockerfile  Dockerfile_build  Dockerfile_container  README.md  docker-compose.yml  pubspec.yaml
src/: CMakeLists.txt  Makefile
src/DCM/: .cproject  .mxproject  CMakeLists.txt  CMakeLists_template.txt  DCM.ioc  DCM.txt  README.md
src/FSM/: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  FSM.cfg  FSM.ioc  FSM.txt  FSM2018.ioc  FSM2018.txt  README.md
src/PDM/: .cproject  .gitattributes  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  PDM.ioc  PDM.txt  PDM_2018-Code.ioc  README.md  STM32F302R8Tx_FLASH.ld
src/cmake/: uvprojx_to_cmake.py
src/f0-can/: Makefile  compile_commands.json  f0-can.ioc
src/selftest_proj/: Makefile  compile_commands.json  selftest_proj.ioc
src/shared/: CMakeLists.txt  Constants.h
validation/: README.md  pyproject.toml
validation/tools/: __init__.py
(+8073 files in other folders)
